[gd_scene load_steps=3 format=3 uid="uid://cq2amqdy4aoms"]

[ext_resource type="Script" uid="uid://cxuahhm74fk3w" path="res://Scenes/ResearchPanel.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://c23uil3etj75v" path="res://Sounds/5-sec-timer.ogg" id="2_qicg7"]

[node name="ResearchPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
text = "Research"

[node name="TimerLabel" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00"
horizontal_alignment = 2

[node name="ViewerScroll" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="ViewerVBox" type="VBoxContainer" parent="Margin/VBox/ViewerScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="NotesLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Your Notes"

[node name="Notes" type="TextEdit" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Type your notes here during the timerâ€¦"
wrap_mode = 2

[node name="CountdownBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qicg7")

[node name="CountdownTimer" type="Timer" parent="."]
